--- a/public/about.html
+++ b/public/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>About - My Website</title>
     <link rel="stylesheet" href="/src/App.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>About Us</h1>
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
@@ -20,15 +20,14 @@
     </header>
     <main>
         <section>
-            <h2>About This Site</h2>
-            <p>This is a sample website to demonstrate HTML and CSS usage.</p>
+            <h2>Our Mission</h2>
+            <p>Learn more about what we do and why we do it.</p>
         </section>
         <button id="interactiveButton">Hover over me!</button>
     </main>
     <footer>
         <p>&copy; 2024 My Website</p>
     </footer>
-    <!-- Link to JavaScript file -->
-    <script src="scripts/script.js"></script>
+    <script src="scripts/about.js"></script>
 </body>
 </html>
