--- a/public/home.html
+++ b/public/home.html
@@ -30,5 +30,6 @@
     </footer>
     <!-- Link to JavaScript file -->
     <script src="scripts/script.js"></script>
+    <script src="scripts/home.js"></script>
 </body>
 </html>
